cka/pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pv-pod
  name: pv-pod
spec:
  serviceAccountName: olaserviceaccount
  containers:
  - image: redis
    name: pv-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
