cka/static.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: static-box
  name: static-box
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: static-box
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
