cka/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tech-policy
  namespace: cka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
         matchLabels:
           app: tech-deploy 
    ports:
    - protocol: TCP
      port: 80
